added sytem administration in decoration

--- a/translations/en.json
+++ b/translations/en.json
@@ -1,4 +1,10 @@
 {
-  "casualGreeting": "hey",
-  "formalGreeting": "hello"
+  "gestionUser": "Admin user",
+  "adminDeath":"Admin-Death",
+  "listUnvalidated": "List-Unvalidated",
+  "searchPatient": "Search-Patient",
+  "patient":"Patient",
+  "declareDeath": "Declare-Death",
+  "validateDeath": "Validate-Death",
+  "settings": "Administration"
 }
